--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,9 +3,9 @@
   <label for="name">Name:</label>
   <input type="text" id="name" name="name"><br>
   <label for="email">Email:</label>
-  <input type="text" id="email" name="email">
+  <input type="text" id="email" name="email"><br>
   <label for="password">Password:</label>
-  <input type="text" id="password" name="password">
+  <input type="text" id="password" name="password"><br>
   <input type="submit" id="submit" value="Submit">
 </form>
 
