--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -6,7 +6,7 @@
   <input type="text" id="email" name="email"><br>
   <label for="password">Password:</label>
   <input type="text" id="password" name="password"><br>
-  <input type="submit" id="submit" value="Submit">
+  <input type="submit" id="submit" value="Sign Up">
 </form>
 
 
